# friska-api

./: .env  .env.example  Cargo.toml  docker-compose.yml
migrations/: 20231228224114_create_users_table.sql  20231228224214_create_lists_table.sql  20231228224314_create_cards_table.sql
src/: main.rs
src/hasher/: mod.rs
src/models/: mod.rs
src/models/auth/: mod.rs
src/models/cards/: mod.rs
src/models/lists/: mod.rs
src/models/users/: mod.rs
src/routes/: mod.rs
src/routes/auth/: mod.rs
src/routes/cards/: mod.rs
src/routes/lists/: mod.rs
src/routes/users/: mod.rs
